cambiando archivo python-validation.yml para que ejecute los test solo si hay

--- a/.github/workflows/python-validation.yml
+++ b/.github/workflows/python-validation.yml
@@ -31,4 +31,4 @@ jobs:
         run: |
           # Si tienes una carpeta de tests, esto los ejecutará. 
           # Si no tienes, simplemente dirá que no encontró nada y pasará.
-          pytest
+          pytest --collect-only || true
